src/phase2-final/k8s/traefik-routing.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: todoapp-core
  namespace: todoapp
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      priority: 100
      match: Host(`todoapp-kps.akawatmor.com`) && (PathPrefix(`/api`) || PathPrefix(`/healthz`) || PathPrefix(`/readyz`))
      services:
        - kind: TraefikService
          name: todoapp-core-weighted
